--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Hedvig+Letters+Serif:opsz@12..24&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>DiqueUno | Residencia Estudiantil</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-gradient-to-l from-orange-600 to-amber-900 text-white relative">
